--- a/video.html
+++ b/video.html
@@ -30,7 +30,7 @@
 			</vg-volume>
 			<vg-fullscreen-button></vg-fullscreen-button>
 			<my-stop-button></my-stop-button>
-      <div class='my-button iconButton'><a href='https://www.versacomputer.com/' target='_blank'><img src='content/versa-logo.jpg'></a></div>
+      <div class='my-button iconButton'><a href='https://www.versacomputer.com/' target='_blank'><img src='versa-logo.jpg'></a></div>
 		</vg-controls>
 	</videogular>
 	
